client/src/scss/main.scss
@import "variables";
@import "app";
@import "navbar";
@import "home";
@import "auth";
@import "chat";
@import "profile";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

.no-scroll {
  overflow: hidden;
}

body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

::-webkit-scrollbar {
  width: 4px;
}


::-webkit-scrollbar-thumb {
  border-radius: 12px;
  background-color: rgba(9, 9, 9, 0.589);
}

::-webkit-scrollbar-corner
{
  display: none;
}

